gitops/applications/guacamole/base/remote-desktop-gateway-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: remote-desktop-gateway
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
