gitops/applications/guacamole/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: docker.io/guacamole/guacd:latest
        name: guacd
        ports:
        - containerPort: 4822
          name: guacd
          protocol: TCP
