gitops/applications/guacamole/base/database-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
spec:
  serviceName: database
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: postgresql
        image: quay.io/sclorg/postgresql-16-c10s:c10s
        livenessProbe:
          tcpSocket:
            port: postgresql
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - ${POSTGRESQL_USER}
            - -d
            - ${POSTGRESQL_DATABASE}
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 3
        startupProbe:
          tcpSocket:
            port: postgresql
          initialDelaySeconds: 0
          periodSeconds: 5
          failureThreshold: 12
        ports:
        - containerPort: 5432
          name: postgresql
          protocol: TCP
        volumeMounts:
        - name: pg-data
          mountPath: /var/lib/pgsql/data
  volumeClaimTemplates:
  - metadata:
      name: pg-data
    spec:
      accessModes:
      - "ReadWriteOnce"
      resources:
        requests:
          storage: 1Gi
      storageClassName: patch-me-see-overlays
