gitops/applications/guacamole/base/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
spec:
  ports:
  - port: 4822
    protocol: TCP
    targetPort: 4822
  selector:
    app: backend
